Giornale Prima Bozza

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         <!-- Audio Section -->
         <section class="audio-section" id="audio-section">
-            <img src="" alt="" class="audio-thumb">
+            <img src="https://i.imgur.com/5huIVv2.jpeg" alt="" class="audio-thumb">
             <div class="audio-content">
                 <span class="section-label">I TITOLI</span>
                 <span class="audio-badge">AUDIO</span>
@@ -135,7 +135,6 @@
             </nav>
         </section>
     </main>
-
     <script src="src/js/script.js"></script>
 </body>
 </html>
